<resources>
    <string name="app_name">QL Hieu Thuoc</string>
    <string name="username">Tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="cfpassword">Xác nhận lại mật khẩu</string>
    <string name="email">Email</string>
    <string name="login">Đăng nhập</string>
    <string name="save">Lưu</string>
    <string name="add">Thêm mới</string>
    <string name="continueInput">Nhập tiếp</string>
    <string name="saveSuccess">Lưu thành công</string>
    <string name="saveFail">Lưu thất bại</string>
    <string name="signup">Đăng kí</string>
    <string name="address">Địa chỉ</string>
    <string name="nameNT">Tên nhà thuốc</string>
    <string name="logout">Đăng xuất</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="saveInfo">Lưu thông tin đăng nhập</string>
    <string name="Info">Thông tin đăng nhập</string>
    <string name="saveLogin">Duy trì đăng nhập</string>
    <string name="account">Tài Khoản</string>
    <string name="hoadon">Xem Hóa Đơn</string>
    <string name="tkcthd">Thống kê chi tiết hóa đơn</string>
    <string name="thuoc">Quản Lý Thuốc</string>
    <string name="hieuthuoc">Quản Lý Hiệu Thuốc</string>
    <string name="nologin">Nếu bạn chưa có tài khoản</string>
    <string name="tenThuoc">Tên thuốc</string>
    <string name="dvt">Đơn vị tính</string>
    <string name="donGia">Đơn giá</string>
</resources>
