<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:layout_marginBottom="20dp"
        android:src="@drawable/hieu_thuoc" />

    <Button
        android:onClick="chuyenHoaDon"
        android:id="@+id/btnHoaDon"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hoadon" />

    <Button
        android:id="@+id/btnCTHoaDon"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="chuyenCTHD"
        android:text="@string/tkcthd" />
    <Button
        android:id="@+id/btnThuoc"
        android:onClick="chuyenThuoc"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/thuoc" />
    <Button
        android:id="@+id/btnHieuThuoc"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:onClick="chuyenHieuThuoc"
        android:layout_gravity="center"
        android:text="@string/hieuthuoc"
         /><Button
        android:id="@+id/btnTaiKhoan"
        android:onClick="chuyenTaiKhoan"
            android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/account" />

    <Button
        android:id="@+id/btnLogout"
        android:onClick="logOut"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logout"
        />


</LinearLayout>