<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:layout_marginBottom="20dp"
        android:src="@drawable/hieu_thuoc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"

        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/password" />



    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chkSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveInfo" />
        <CheckBox
            android:id="@+id/chkLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveLogin" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:onClick="handleSignup"
            android:layout_margin="10dp"
            android:id="@+id/tvSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/nologin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/purple_500" />


    </LinearLayout>

</LinearLayout>