<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThemNhaThuoc">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:foregroundGravity="left"
            android:onClick="handBack"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/back" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_weight="5"
            android:layout_width="50dp"
            android:layout_height="70dp"

            android:layout_marginBottom="20dp"
            android:src="@drawable/hieu_thuoc" />




    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameNT"

        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/edtTenNT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/address" />



    <EditText
        android:id="@+id/edtDiaChi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:onClick="handleAdd"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnSave"
            android:onClick="handleSave"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnContinue"
            android:onClick="handleContinue"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/continueInput"
            />

    </LinearLayout>

</LinearLayout>